--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,21 @@ jobs:
       run:
         working-directory: ./frontend
     
+    services:
+      postgres:
+        image: postgres:15-alpine
+        env:
+          POSTGRES_USER: waterball_simple_user
+          POSTGRES_PASSWORD: waterball_simple_password
+          POSTGRES_DB: waterball_simple_db
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -76,6 +91,34 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
           cache: 'gradle'
+      
+      - name: Install PostgreSQL client and netcat
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y postgresql-client netcat-traditional || sudo apt-get install -y postgresql-client netcat
+      
+      - name: Wait for PostgreSQL
+        run: |
+          echo "Waiting for PostgreSQL to be ready..."
+          for i in {1..60}; do
+            # Check if port is open
+            if nc -z localhost 5432 2>/dev/null || timeout 1 bash -c 'cat < /dev/null > /dev/tcp/localhost/5432' 2>/dev/null; then
+              echo "PostgreSQL port is open, testing connection..."
+              # Try to connect with psql
+              if PGPASSWORD=waterball_simple_password psql -h localhost -p 5432 -U waterball_simple_user -d waterball_simple_db -c "SELECT 1" > /dev/null 2>&1; then
+                echo "PostgreSQL is ready and accepting connections"
+                exit 0
+              else
+                echo "Port is open but connection failed, retrying..."
+                sleep 2
+              fi
+            else
+              echo "Waiting for PostgreSQL port to open... ($i/60)"
+              sleep 2
+            fi
+          done
+          echo "PostgreSQL failed to start or is not accessible"
+          exit 1
       
       - name: Start backend server
         run: |
@@ -157,6 +200,21 @@ jobs:
       run:
         working-directory: ./frontend
     
+    services:
+      postgres:
+        image: postgres:15-alpine
+        env:
+          POSTGRES_USER: waterball_simple_user
+          POSTGRES_PASSWORD: waterball_simple_password
+          POSTGRES_DB: waterball_simple_db
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -185,6 +243,34 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
           cache: 'gradle'
+      
+      - name: Install PostgreSQL client and netcat
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y postgresql-client netcat-traditional || sudo apt-get install -y postgresql-client netcat
+      
+      - name: Wait for PostgreSQL
+        run: |
+          echo "Waiting for PostgreSQL to be ready..."
+          for i in {1..60}; do
+            # Check if port is open
+            if nc -z localhost 5432 2>/dev/null || timeout 1 bash -c 'cat < /dev/null > /dev/tcp/localhost/5432' 2>/dev/null; then
+              echo "PostgreSQL port is open, testing connection..."
+              # Try to connect with psql
+              if PGPASSWORD=waterball_simple_password psql -h localhost -p 5432 -U waterball_simple_user -d waterball_simple_db -c "SELECT 1" > /dev/null 2>&1; then
+                echo "PostgreSQL is ready and accepting connections"
+                exit 0
+              else
+                echo "Port is open but connection failed, retrying..."
+                sleep 2
+              fi
+            else
+              echo "Waiting for PostgreSQL port to open... ($i/60)"
+              sleep 2
+            fi
+          done
+          echo "PostgreSQL failed to start or is not accessible"
+          exit 1
       
       - name: Start backend server
         run: |
